--- a/css/ownStyles.css
+++ b/css/ownStyles.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@font-face {
+    font-family: myFont;
+    src: url('../fonts/Montserrat-VariableFont_wght.ttf');
+}
 *{
     --color: #439A97;
     --dark: #387d7b;
-    --ff: 'Montserrat', sans-serif;
+    --ff: myFont;
     --color2: #97DECE;
     --color3: #EEEEEE;
     box-sizing: border-box;
